Added better-sqlite3 dependency

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "express": "^4.21.2",
-        "sqlite3": "^5.1.7"
+        "better-sqlite3": "^11.9.1",
+        "express": "^4.21.2"
     },
     "keywords": [],
     "author": "",
