--- a/package.json
+++ b/package.json
@@ -1,29 +1,33 @@
 {
-    "name": "record-manager",
-    "version": "1.0.0",
-    "description": "画像付きの音楽アルバムを登録・検索・編集・削除できるExpress + SQLiteベースの管理システム",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js"
-    },
-    "keywords": [
-        "music",
-        "album",
-        "record",
-        "sqlite",
-        "express",
-        "upload",
-        "multer"
-    ],
-    "author": "DKswing",
-    "license": "ISC",
-    "dependencies": {
-        "better-sqlite3": "^11.9.1",
-        "express": "^4.21.2",
-        "multer": "^1.4.5-lts.2"
-    },
-    "devDependencies": {
-        "nodemon": "^3.0.3"
-    }
+  "name": "record-manager",
+  "version": "1.0.0",
+  "description": "画像付きの音楽アルバムを登録・検索・編集・削除できるExpress + SQLiteベースの管理システム",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "npm install && npm rebuild better-sqlite3"
+  },
+  "keywords": [
+    "music",
+    "album",
+    "record",
+    "sqlite",
+    "express",
+    "upload",
+    "multer"
+  ],
+  "author": "DKswing",
+  "license": "ISC",
+  "dependencies": {
+    "better-sqlite3": "^11.9.1",
+    "express": "^4.21.2",
+    "multer": "^1.4.5-lts.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=18 <23"
+  }
 }
