--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "better-sqlite3": "^7.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "multer": "^1.4.5-lts.2",
-    "sqlite3": "^5.1.7"
+    "multer": "^1.4.5-lts.2"
   },
   "engines": {
     "node": "16.x"
@@ -23,7 +22,6 @@
     "type": "git",
     "url": "git+https://github.com/keeeits/DKswing-manager.git"
   },
-  "keywords": [],
   "bugs": {
     "url": "https://github.com/keeeits/DKswing-manager/issues"
   },
